fix: actionAlign left 不生效

--- a/src/components/BaseAction/index.module.less
+++ b/src/components/BaseAction/index.module.less
@@ -16,12 +16,12 @@
   }
   &.alignLeft {
     &:global(.@{ant-prefix}-btn) {
-      text-align: left;
+      justify-content: left;
     }
   }
   &.alignRight {
     &:global(.@{ant-prefix}-btn) {
-      text-align: right;
+      justify-content: right;
     }
   }
 }
